--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,7 @@ android {
         versionName "1.3.38"
         // testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
+        resValue "string", "google_maps_key", (project.findProperty("GOOGLE_MAPS_API_KEY") ?: "")
     }
     buildTypes {
         release {
@@ -51,7 +52,8 @@ dependencies {
     implementation "android.arch.lifecycle:extensions:$lifecycle_version"
     implementation project(':userlogging')
     implementation project(':usersetting')
+    implementation 'com.google.android.gms:play-services-maps:16.1.0'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
 }
-
 
 apply plugin: 'com.google.gms.google-services'
