--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     implementation project(':userlogging')
     implementation project(':usersetting')
     implementation 'com.google.android.gms:play-services-maps:16.1.0'
+    implementation 'com.google.android.gms:play-services-location:15.0.0'
     implementation 'com.android.support:appcompat-v7:26.1.0'
 }
 
