Update GeoStory sharing to be able to handle auto-transcription

--- a/userlogging/build.gradle
+++ b/userlogging/build.gradle
@@ -1,2 +1,2 @@
 configurations.maybeCreate("default")
-artifacts.add("default", file('UserLogging-debug.aar'))
+artifacts.add("default", file('UserLogging-release.aar'))
