--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,8 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
         android:largeHeap="true"
+        android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
             android:name=".SplashScreenActivity"
@@ -83,14 +83,23 @@
         <activity
             android:name=".AboutActivity"
             android:label="@string/appinfo_about"
+            android:parentActivityName=".HomeActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.About"
-            android:parentActivityName=".HomeActivity" >
+            android:theme="@style/AppTheme.About">
+
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".HomeActivity" />
-
+        </activity>
+        <activity
+            android:name=".FitnessSyncActivity"
+            android:label="@string/title_activity_fitness_sync"
+            android:parentActivityName=".AboutActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".AboutActivity" />
         </activity>
 
         <receiver android:name="edu.neu.ccs.wellness.utils.NetworkConnectionProctor">
@@ -99,6 +108,7 @@
                 <action android:name="android.net.wifi.WIFI_STATE_CHANGED" />
             </intent-filter>
         </receiver>
+
         <activity
             android:name=".settings.SettingsActivity"
             android:label="@string/title_activity_settings"
@@ -116,9 +126,7 @@
             android:label="@string/title_activity_pairing_tracker"
             android:parentActivityName=".settings.DiscoverTrackersActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar" />
-
-        <!-- BROADCAST RECEIVERS -->
+            android:theme="@style/AppTheme.NoActionBar" /> <!-- BROADCAST RECEIVERS -->
         <receiver
             android:name=".utils.BootReceiver"
             android:enabled="true"
@@ -131,46 +139,39 @@
             android:name=".sync.FitnessSyncReceiver"
             android:enabled="true"
             android:exported="false" />
-        <receiver android:name=".notifications.RegularReminderReceiver"
+        <receiver
+            android:name=".notifications.RegularReminderReceiver"
             android:enabled="true"
-            android:exported="false">
-        </receiver>
-
-        <!-- Services -->
+            android:exported="false"></receiver> <!-- Services -->
         <service
             android:name=".sync.FitnessSyncService"
             android:enabled="true"
-            android:stopWithTask="false"
-            android:exported="false"/>
-
+            android:exported="false"
+            android:stopWithTask="false" />
         <service android:name=".notifications.FcmNotificationService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
-        </service>
-
-        <!-- Metadata -->
+        </service> <!-- Metadata -->
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
             android:resource="@drawable/ic_round_baloons_24px" />
-        <!-- Set color used with incoming notification messages. This is used when no color is set for the incoming
-             notification message. See README(https://goo.gl/6BKBk7) for more. -->
+        <!--
+ Set color used with incoming notification messages. This is used when no color is set for the incoming
+             notification message. See README(https://goo.gl/6BKBk7) for more.
+        -->
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_color"
             android:resource="@color/colorPrimary" />
-
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_channel_id"
             android:value="@string/notification_default_channel_id" />
-
         <meta-data
             android:name="firebase_crashlytics_collection_enabled"
             android:value="true" />
-
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
-
     </application>
 
 </manifest>
