--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.WRITE_INTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.STORAGE" />
@@ -44,12 +45,14 @@
         <activity
             android:name=".firstrun.FirstRunActivity"
             android:label="@string/title_activity_home"
+            android:icon="@mipmap/ic_launcher"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.SplashScreen" />
         <activity
             android:name=".HomeActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_home"
+            android:icon="@mipmap/ic_launcher"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.HomeView" />
         <activity
