--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:16.1.0'
     implementation 'com.google.firebase:firebase-messaging:17.4.0'
     implementation 'com.google.firebase:firebase-functions:16.3.0'
+    implementation 'com.google.firebase:firebase-config:16.3.0'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.9'
     // compile 'com.google.firebase:firebase-core:11.4.2'
     // compile 'com.google.firebase:firebase-database:11.4.2'
